fix mobile nav overflow

--- a/src/components/layout.css
+++ b/src/components/layout.css
@@ -404,13 +404,15 @@ margin-left: auto; }
   align-items: center;
   position: absolute;
   overflow: hidden;
-  top: 50px;
+  top: 40px;
   left: 30px;
   z-index: -2;
 }
 
 .avatar p {
   font-size: .8rem;
+  text-align: center;
+  color: var(--primary-color);
 }
 
 .avatar-img { 
@@ -490,22 +492,24 @@ margin-left: auto; }
 }
 
 .mobile-nav {
-  position: relative;
+  position: absolute;
   background-color: #fff;
+  box-shadow: 0 1px 3px 0 rgba(0,0,0,.3);
   width: 100%;
-  height: 100%;
-  padding-top: 60px;
+  height: 100vh;
+  margin-top: 60px;
   flex-direction: column;
   justify-content: center;
   align-items: flex-end;
   text-align: right;
   display: none;
+  right: -100vw;
   transition: all .2s ease-in-out;
   z-index: 1000;
-}.show { display: flex; }
+}.show { right: 0; display: flex; }
 
 .mobile-nav li {
-  padding: 15px 0;
+  padding: 20px 0;
   list-style: none;
 }
 
